--- a/addon/templates/components/emoji-picker.hbs
+++ b/addon/templates/components/emoji-picker.hbs
@@ -18,7 +18,7 @@
   {{#emoji-picker/scroller}}
     <div class="eep-select__sections{{if _isSearchMode ' is-active'}}">
       <div class="eep-select-section">
-        <div class="eep-select-section__name">Search results:</div>
+        <div class="eep-select-section__name">{{texts.searchResults}}:</div>
         <div class="eep-select-section__emoji">
           {{#if _searchResults}}
             <div class="eep-symbols">
@@ -28,7 +28,7 @@
             </div>
           {{else}}
             <div class="eep-symbols eep-symbols--no-found">
-              nothing found
+              {{texts.noFound}}
             </div>
           {{/if}}
         </div>
@@ -36,14 +36,14 @@
     </div>
     <div class="eep-select__sections{{unless _isSearchMode ' is-active'}}">
       {{#if showRecent}}
-        {{#emoji-picker/section category=recentEmoji}}
+        {{#emoji-picker/section category=recentEmoji texts=texts.categories}}
           {{#each recentEmoji.emoji as |emoji|}}
             {{emoji-picker/symbol emoji=emoji click=(action 'selectEmoji' emoji)}}
           {{/each}}
         {{/emoji-picker/section}}
       {{/if}}
       {{#each emojiByCategories as |category|}}
-        {{#emoji-picker/section category=category}}
+        {{#emoji-picker/section category=category texts=texts.categories}}
           {{#each category.emoji as |emoji|}}
             {{emoji-picker/symbol emoji=emoji click=(action 'selectEmoji' emoji)}}
           {{/each}}
