--- a/addon/styles/emoji-picker.less
+++ b/addon/styles/emoji-picker.less
@@ -6,7 +6,7 @@
 @hover-color: #f2f2f2;
 @width: 320px;
 @scroll-height: 320px;
-@emoji-per-row: 7;
+@emoji-per-row: 9;
 @icon-color: #bdbdbd;
 @icon-color-active: #4ca9f3;
 @separator-color: #e1e1e1;
@@ -77,7 +77,7 @@
   top: 0;
   line-height: 1.4;
   z-index: 2;
-  padding: 2*@grid 2*@grid;
+  padding: 2*@grid 4*@grid;
   margin: 0 2*@grid;
 
   &:after {
@@ -98,11 +98,12 @@
   align-content: space-between;
   overflow: hidden;
   margin: 0 -2*@grid;
-  padding: 0 4*@grid;
+  padding: 0 6*@grid;
 }
 
 .eep-symbols--no-found {
   margin: 0;
+  opacity: .6;
 }
 
 .eep-symbols__item {
