--- a/addon/styles/emoji-picker.less
+++ b/addon/styles/emoji-picker.less
@@ -79,6 +79,8 @@
   z-index: 2;
   padding: 2*@grid 4*@grid;
   margin: 0 2*@grid;
+  font-size: 12px;
+  color: 999999;
 
   &:after {
     content: '';
