--- a/addon/templates/components/emoji-picker.hbs
+++ b/addon/templates/components/emoji-picker.hbs
@@ -12,7 +12,7 @@
   </div>
   {{emoji-picker/form
       value=_searchQuery
-      placeholder='search'
+      placeholder=texts.searchPlaceholder
   }}
 
   {{#emoji-picker/scroller}}
