--- a/addon/styles/emoji-picker.less
+++ b/addon/styles/emoji-picker.less
@@ -80,7 +80,7 @@
   padding: 2*@grid 4*@grid;
   margin: 0 2*@grid;
   font-size: 12px;
-  color: 999999;
+  color: #999;
 
   &:after {
     content: '';
@@ -170,7 +170,7 @@
 
 .eep-select__form {
   display: block;
-  padding: 2*@grid;
+  padding: 2*@grid 4*@grid;
 }
 
 .eep-select__navigation {
