first step optimization

--- a/addon/templates/components/emoji-picker.hbs
+++ b/addon/templates/components/emoji-picker.hbs
@@ -38,14 +38,18 @@
       {{#if showRecent}}
         {{#emoji-picker/section category=recentEmoji texts=texts.categories}}
           {{#each recentEmoji.emoji as |emoji|}}
-            {{emoji-picker/symbol emoji=emoji click=(action 'selectEmoji' emoji)}}
+            <div class="eep-symbols__item eep-emoji-font" {{action 'selectEmoji' emoji}}>
+              <span>{{emoji.char}}</span>
+            </div>
           {{/each}}
         {{/emoji-picker/section}}
       {{/if}}
       {{#each emojiByCategories as |category|}}
         {{#emoji-picker/section category=category texts=texts.categories}}
           {{#each category.emoji as |emoji|}}
-            {{emoji-picker/symbol emoji=emoji click=(action 'selectEmoji' emoji)}}
+            <div class="eep-symbols__item eep-emoji-font" {{action 'selectEmoji' emoji}}>
+              <span>{{emoji.char}}</span>
+            </div>
           {{/each}}
         {{/emoji-picker/section}}
       {{/each}}
