--- a/addon/templates/components/emoji-picker/form.hbs
+++ b/addon/templates/components/emoji-picker/form.hbs
@@ -1,7 +1,7 @@
-{{input
+<Input
     type="text"
-    class=_class
-    placeholder=placeholder
-    value=value
-    key-up=(action onChange)
-}}
+    @class={{this._class}}
+    @placeholder={{@placeholder}}
+    @value={{@value}}
+    @keyUp={{fn @onChange}}
+/>
