--- a/addon/templates/components/emoji-picker/section.hbs
+++ b/addon/templates/components/emoji-picker/section.hbs
@@ -1,4 +1,4 @@
-<div class="eep-select-section__name js-eep-select-section-name">{{name}}</div>
+<div class="eep-select-section__name js-eep-select-section-name">{{this.name}}</div>
 <div class="eep-select-section__emoji">
   <div class="eep-symbols">
     {{yield}}
