--- a/addon/styles/emoji-picker.less
+++ b/addon/styles/emoji-picker.less
@@ -41,7 +41,8 @@
 
 .eep-select__scroller {
   height: @scroll-height;
-  overflow: hidden auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   position: relative;
 
   .nano-pane {
