--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -4,7 +4,7 @@
 </div>
 {{#if show}}
   <div style="max-width: 400px; margin: 50px auto; box-shadow: 0 0 8px rgba(0,0,0,.2)">
-    <EmojiPicker/>
+    <EmojiPicker @texts={{hash categories=(hash recent="foo baz")}}/>
   </div>
 {{/if}}
 
